// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTourStep can be closed 1`] = `
<div
  class="euiPopover css-lisp4o-euiPopover-EuiPopover"
  data-test-subj="test subject string"
  offset="10"
>
  <div
    class="euiPopover__anchor css-17g0ovn-EuiPopover"
  >
    <span>
      Test
    </span>
  </div>
</div>
`;

exports[`EuiTourStep can change the minWidth and maxWidth 1`] = `
<div
  class="euiPopover euiPopover-isOpen css-lisp4o-euiPopover-EuiPopover"
  data-test-subj="test subject string"
  offset="10"
>
  <div
    class="euiPopover__anchor css-17g0ovn-EuiPopover"
  >
    <span>
      Test
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-label="aria-label"
      aria-labelledby="generated-id"
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiTour testClass1 testClass2 css-e657fw-euiPanel-grow-m-m-plain-euiPopover__panel-isOpen-left"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -22px; left: -26px; will-change: transform, opacity; z-index: 2000;"
    >
      <div
        class="css-acsy3l-euiPopoverArrow-left"
        data-popover-arrow="left"
        style="left: 0px; top: 10px;"
      >
        <div
          class="euiBeacon euiTour__beacon css-c8h4zr-euiBeacon"
          style="height: 12px; width: 12px;"
        />
      </div>
      <div>
        <div
          style="min-width: 240px; max-width: 420px;"
        >
          <div
            class="euiPopoverTitle euiTourHeader css-js0o9x-euiPopoverTitle-m"
            id="generated-id"
          >
            <h2
              class="euiTitle euiTourHeader__title css-1po7voc-euiTitle-xxs"
            >
              A demo
            </h2>
          </div>
          <div
            class="euiTour__content"
          >
            You are here
          </div>
          <div
            class="euiPopoverFooter euiTourFooter css-1uxhxv3-euiPopoverFooter-m"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Close tour
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiTourStep can have subtitle 1`] = `
<div
  class="euiPopover euiPopover-isOpen css-lisp4o-euiPopover-EuiPopover"
  data-test-subj="test subject string"
  offset="10"
>
  <div
    class="euiPopover__anchor css-17g0ovn-EuiPopover"
  >
    <span>
      Test
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-label="aria-label"
      aria-labelledby="generated-id"
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiTour testClass1 testClass2 css-e657fw-euiPanel-grow-m-m-plain-euiPopover__panel-isOpen-left"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -22px; left: -26px; will-change: transform, opacity; z-index: 2000;"
    >
      <div
        class="css-acsy3l-euiPopoverArrow-left"
        data-popover-arrow="left"
        style="left: 0px; top: 10px;"
      >
        <div
          class="euiBeacon euiTour__beacon css-c8h4zr-euiBeacon"
          style="height: 12px; width: 12px;"
        />
      </div>
      <div>
        <div
          style="min-width: 300px; max-width: 600px;"
        >
          <div
            class="euiPopoverTitle euiTourHeader css-js0o9x-euiPopoverTitle-m"
            id="generated-id"
          >
            <h2
              class="euiTitle euiTourHeader__subtitle css-7xv8go-euiTitle-xxxs"
            >
              Subtitle
            </h2>
            <h3
              class="euiTitle euiTourHeader__title css-1po7voc-euiTitle-xxs"
            >
              A demo
            </h3>
          </div>
          <div
            class="euiTour__content"
          >
            You are here
          </div>
          <div
            class="euiPopoverFooter euiTourFooter css-1uxhxv3-euiPopoverFooter-m"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Close tour
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiTourStep can override the footer action 1`] = `
<div
  class="euiPopover euiPopover-isOpen css-lisp4o-euiPopover-EuiPopover"
  data-test-subj="test subject string"
  offset="10"
>
  <div
    class="euiPopover__anchor css-17g0ovn-EuiPopover"
  >
    <span>
      Test
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-label="aria-label"
      aria-labelledby="generated-id"
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiTour testClass1 testClass2 css-e657fw-euiPanel-grow-m-m-plain-euiPopover__panel-isOpen-left"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -22px; left: -26px; will-change: transform, opacity; z-index: 2000;"
    >
      <div
        class="css-acsy3l-euiPopoverArrow-left"
        data-popover-arrow="left"
        style="left: 0px; top: 10px;"
      >
        <div
          class="euiBeacon euiTour__beacon css-c8h4zr-euiBeacon"
          style="height: 12px; width: 12px;"
        />
      </div>
      <div>
        <div
          style="min-width: 300px; max-width: 600px;"
        >
          <div
            class="euiPopoverTitle euiTourHeader css-js0o9x-euiPopoverTitle-m"
            id="generated-id"
          >
            <h2
              class="euiTitle euiTourHeader__title css-1po7voc-euiTitle-xxs"
            >
              A demo
            </h2>
          </div>
          <div
            class="euiTour__content"
          >
            You are here
          </div>
          <div
            class="euiPopoverFooter euiTourFooter css-1uxhxv3-euiPopoverFooter-m"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <button>
                  Test
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiTourStep can turn off the beacon 1`] = `
<div
  class="euiPopover euiPopover-isOpen css-lisp4o-euiPopover-EuiPopover"
  data-test-subj="test subject string"
  offset="0"
>
  <div
    class="euiPopover__anchor css-17g0ovn-EuiPopover"
  >
    <span>
      Test
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-label="aria-label"
      aria-labelledby="generated-id"
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiTour testClass1 testClass2 css-e657fw-euiPanel-grow-m-m-plain-euiPopover__panel-isOpen-left"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -22px; left: -16px; will-change: transform, opacity; z-index: 2000;"
    >
      <div
        class="css-acsy3l-euiPopoverArrow-left"
        data-popover-arrow="left"
        style="left: 0px; top: 10px;"
      />
      <div>
        <div
          style="min-width: 300px; max-width: 600px;"
        >
          <div
            class="euiPopoverTitle euiTourHeader css-js0o9x-euiPopoverTitle-m"
            id="generated-id"
          >
            <h2
              class="euiTitle euiTourHeader__title css-1po7voc-euiTitle-xxs"
            >
              A demo
            </h2>
          </div>
          <div
            class="euiTour__content"
          >
            You are here
          </div>
          <div
            class="euiPopoverFooter euiTourFooter css-1uxhxv3-euiPopoverFooter-m"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Close tour
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiTourStep is rendered 1`] = `
<div
  class="euiPopover euiPopover-isOpen css-lisp4o-euiPopover-EuiPopover"
  data-test-subj="test subject string"
  offset="10"
>
  <div
    class="euiPopover__anchor css-17g0ovn-EuiPopover"
  >
    <span>
      Test
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-label="aria-label"
      aria-labelledby="generated-id"
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiTour testClass1 testClass2 css-e657fw-euiPanel-grow-m-m-plain-euiPopover__panel-isOpen-left"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -22px; left: -26px; will-change: transform, opacity; z-index: 2000;"
    >
      <div
        class="css-acsy3l-euiPopoverArrow-left"
        data-popover-arrow="left"
        style="left: 0px; top: 10px;"
      >
        <div
          class="euiBeacon euiTour__beacon css-c8h4zr-euiBeacon"
          style="height: 12px; width: 12px;"
        />
      </div>
      <div>
        <div
          style="min-width: 300px; max-width: 600px;"
        >
          <div
            class="euiPopoverTitle euiTourHeader css-js0o9x-euiPopoverTitle-m"
            id="generated-id"
          >
            <h2
              class="euiTitle euiTourHeader__title css-1po7voc-euiTitle-xxs"
            >
              A demo
            </h2>
          </div>
          <div
            class="euiTour__content"
          >
            You are here
          </div>
          <div
            class="euiPopoverFooter euiTourFooter css-1uxhxv3-euiPopoverFooter-m"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Close tour
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;
